; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/vc/extr_mmal_vc_opaque_alloc.c_mmal_vc_opaque_alloc_desc.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/vc/extr_mmal_vc_opaque_alloc.c_mmal_vc_opaque_alloc_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32 }

@MMAL_WORKER_OPAQUE_MEM_ALLOC = common dso_local global i32 0, align 4
@MMAL_WORKER_OPAQUE_ALLOCATOR_DESC = common dso_local global i32 0, align 4
@MMAL_FALSE = common dso_local global i32 0, align 4
@MMAL_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mmal_vc_opaque_alloc_desc(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 4
  %6 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %4, align 4
  store i64 16, i64* %6, align 8
  %7 = load i32, i32* @MMAL_WORKER_OPAQUE_MEM_ALLOC, align 4
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  store i32 %7, i32* %8, align 4
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = load i8*, i8** %2, align 8
  %12 = call i32 @vcos_safe_strcpy(i32 %10, i8* %11, i32 4, i32 0)
  %13 = call i32 (...) @mmal_vc_get_client()
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %15 = load i32, i32* @MMAL_WORKER_OPAQUE_ALLOCATOR_DESC, align 4
  %16 = load i32, i32* @MMAL_FALSE, align 4
  %17 = call i64 @mmal_vc_sendwait_message(i32 %13, i32* %14, i32 16, i32 %15, %struct.TYPE_3__* %5, i64* %6, i32 %16)
  store i64 %17, i64* %3, align 8
  %18 = load i64, i64* %3, align 8
  %19 = load i64, i64* @MMAL_SUCCESS, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %1
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %21, %1
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i32 @vcos_safe_strcpy(i32, i8*, i32, i32) #1

declare dso_local i64 @mmal_vc_sendwait_message(i32, i32*, i32, i32, %struct.TYPE_3__*, i64*, i32) #1

declare dso_local i32 @mmal_vc_get_client(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
